my-deployment-eval.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sql-api
  labels:
    app: sql
spec:
  selector:
    matchLabels:
      app: sql
  replicas: 1
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: sql
    spec:
      containers:
        - name: mysql
          image: datascientest/mysql-k8s:1.0.0
        - name: fastapi
          image: akinasorrow/fastapi:1.0.9
          ports:
            - containerPort: 8000
