my-service-eval.yml
apiVersion: v1
kind: Service
metadata:
  name: sql-api
  labels:
    app: sql
spec:
  ports:
    - port: 8000
      protocol: TCP
      targetPort: 8000
  selector:
    app: sql
  type: ClusterIP
  clusterIP: 10.43.11.51
